plugins {
  id 'java-library'
}

apply(from: "${rootDir}/gradle/java.gradle")
apply(from: "${rootDir}/gradle/test.gradle")
apply(from: "${rootDir}/gradle/code-style.gradle")
apply(from: "${rootDir}/gradle/checkstyle.gradle")

dependencies {
  api libs.avaje.jsonb

  testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.0' 
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(25)
  }
}
